force-app/main/default/objects/Project_Image__c/Project_Image__c.object-meta.xml
<CustomObject>
    <label>Project Image</label>
    <nameField>
        <label>Project Image Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Images</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>