force-app/main/default/objects/Project_Image__c/fields/Personal_Project__c.field-meta.xml
<CustomField>
    <fullName>Personal_Project__c</fullName>
    <label>Personal Project</label>
    <referenceTo>Personal_Project__c</referenceTo>
    <relationshipLabel>Project Images</relationshipLabel>
    <relationshipName>Project_Images</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>